--- a/QLNS/WINDOWS/SACH_WINDOW.xaml
+++ b/QLNS/WINDOWS/SACH_WINDOW.xaml
@@ -5,23 +5,96 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLNS"
         mc:Ignorable="d"
-        Title="SACH_WINDOW" Height="500" Width="800">
+        MinHeight="500"
+        MinWidth="800"
+        Title="SACH_WINDOW" Height="550" Width="800">
+
     <Grid>
-        <GroupBox Header="Nhập thông tin sách" HorizontalAlignment="Left" Height="164" Margin="10,10,0,0" VerticalAlignment="Top" Width="772"/>
-        <Label Content="Mã Sách: " HorizontalAlignment="Left" Margin="45,46,0,0" VerticalAlignment="Top"/>
-        <Label Content="Tên Sách: " HorizontalAlignment="Left" Margin="45,74,0,0" VerticalAlignment="Top"/>
-        <Label Content="Thể Loại: " HorizontalAlignment="Left" Margin="45,102,0,0" VerticalAlignment="Top"/>
-        <Label Content="Tác Giả: " HorizontalAlignment="Left" Margin="420,46,0,0" VerticalAlignment="Top"/>
-        <Label Content="Số Lượng Tồn: " HorizontalAlignment="Left" Margin="420,74,0,0" VerticalAlignment="Top"/>
-        <Label Content="Đơn Giá: " HorizontalAlignment="Left" Margin="420,102,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="122,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="122,78,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="122,106,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="523,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="523,78,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="523,106,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
-        <GroupBox Header="GroupBox" HorizontalAlignment="Left" Height="271" Margin="10,188,0,0" VerticalAlignment="Top" Width="772">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="130" ></RowDefinition>
+            <RowDefinition Height="65"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <GroupBox Header="Nhập Thông Tin Sách" Margin="15,10,15,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" >
+                        <Label Content="Mã Sách: " HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Tên Sách: " HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Thể Loại: " HorizontalAlignment="Left" Margin="7,59,0,0" VerticalAlignment="Top"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="72,3,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="293"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="72,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="293"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="72,59,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="293"/>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Label Content="Tác Giả: " HorizontalAlignment="Left" Margin="5,3,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Số Lượng Tồn: " HorizontalAlignment="Left" Margin="5,28,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Đơn Giá: " HorizontalAlignment="Left" Margin="5,59,0,0" VerticalAlignment="Top"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="95,3,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="270"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="95,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="270"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="95,59,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="270"/>
+
+                    </Grid>
+                </Grid>
+
+            </GroupBox>
+        </Grid>
+        <Grid Grid.Row="1">
+            <GroupBox Header="Chức Năng" Margin="15,10,15,0">
+                <Grid>
+                    <Button Content="Thêm" HorizontalAlignment="Center" Margin="231,5,443,0" VerticalAlignment="Top" Width="76"/>
+
+                    <Button Content="Sửa" HorizontalAlignment="Center" Margin="335,5,341,0" VerticalAlignment="Top" Width="74"/>
+
+                    <Button Content="Xóa" HorizontalAlignment="Center" Margin="432,5,244,0" VerticalAlignment="Top" Width="74"/>
+                </Grid>
+
+            </GroupBox>
+
+        </Grid>
+        <Grid Grid.Row="2">
+            <GroupBox Header="Thông Tin Sách" Margin="15,10,15,0">
+                <Grid>
+                    <DataGrid></DataGrid>
+                </Grid>
+
+            </GroupBox>
+
+        </Grid>
+    </Grid>
+   
+    <!--<Grid>
+        <GroupBox Header="Nhập thông tin sách" HorizontalAlignment="Right" Height="164" Margin="10,10,0,0" VerticalAlignment="Top" Width="772"/>
+        <Grid HorizontalAlignment="Left" Height="97" Margin="61,50,0,0" VerticalAlignment="Top" Width="589">
+
+            <Label Content="Mã Sách: " HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
+            <Label Content="Tên Sách: " HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top"/>
+            <Label Content="Thể Loại: " HorizontalAlignment="Left" Margin="7,59,0,0" VerticalAlignment="Top"/>
+            <Label Content="Tác Giả: " HorizontalAlignment="Left" Margin="347,3,0,0" VerticalAlignment="Top"/>
+            <Label Content="Số Lượng Tồn: " HorizontalAlignment="Left" Margin="310,28,0,0" VerticalAlignment="Top"/>
+            <Label Content="Đơn Giá: " HorizontalAlignment="Left" Margin="341,59,0,0" VerticalAlignment="Top"/>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="72,3,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="72,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="72,59,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="420,3,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="420,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="420,59,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
+        </Grid>
+
+        <GroupBox Header="Chức Năng" HorizontalAlignment="Left" Height="55" Margin="10,179,0,0" VerticalAlignment="Top" Width="772">
+        </GroupBox>
+
+        <Button Content="Thêm" HorizontalAlignment="Left" Margin="45,200,0,0" VerticalAlignment="Top" Width="75"/>
+
+        <Button Content="Sửa" HorizontalAlignment="Left" Margin="171,200,0,0" VerticalAlignment="Top" Width="75"/>
+
+        <Button Content="Xóa" HorizontalAlignment="Left" Margin="308,200,0,0" VerticalAlignment="Top" Width="75"/>
+        <GroupBox Header="Thông Tin Sách" HorizontalAlignment="Left" Height="272" Margin="10,234,0,0" VerticalAlignment="Top" Width="772">
             <DataGrid HorizontalAlignment="Left" Height="230" Margin="10,10,0,0" VerticalAlignment="Top" Width="742"/>
         </GroupBox>
-    </Grid>
+    </Grid>-->
 </Window>
