--- a/QLNS/Views/BOOK_WINDOW.xaml
+++ b/QLNS/Views/BOOK_WINDOW.xaml
@@ -59,14 +59,17 @@
                         <Label Content="Tên Sách: " HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Top"/>
                         <Label Content="Thể Loại: " HorizontalAlignment="Left" Margin="0,33,0,0" VerticalAlignment="Top"/>
                         <Label Content="Tác Giả: " HorizontalAlignment="Left" Margin="0,59,0,0" VerticalAlignment="Top"/>
-                        <TextBox Text="{Binding NewBook.Name , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                        <TextBox x:Name="txtTen" Text="{Binding NewBook.Name , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
                                  Validation.Error="Validation_Error"
+                                 IsReadOnly="True"
                                  HorizontalAlignment="Left" Height="23" Margin="72,6,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="275"/>
-                        <TextBox Text="{Binding NewBook.Category , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                        <TextBox x:Name="txtTheloai" Text="{Binding NewBook.Category , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
                                  Validation.Error="Validation_Error"  
+                                 IsReadOnly="True"
                                  HorizontalAlignment="Left" Height="23" Margin="72,34,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="275"/>
-                        <TextBox Text="{Binding NewBook.Author , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                        <TextBox x:Name="txtTacgia" Text="{Binding NewBook.Author , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
                                  Validation.Error="Validation_Error"
+                                 IsReadOnly="True"
                                  HorizontalAlignment="Left" Height="23" Margin="72,62,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="275"/>
 
                     </Grid>
@@ -74,11 +77,16 @@
                         <Label Content="Số Lượng Tồn: " HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top"/>
                         <Label Content="Đơn Giá: " HorizontalAlignment="Left" Margin="10,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.576,0.192"/>
                         <Label Content="SL Nhập: " HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.283,0.615"/>
-                        <TextBox Text="{Binding NewBook.Quantity, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
-                                 Validation.Error="Validation_Error"    HorizontalAlignment="Left" Height="23" Margin="100,8,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="249"/>
-                        <TextBox Text="{Binding NewBook.Price, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
-                                 Validation.Error="Validation_Error"   HorizontalAlignment="Left" Height="23" Margin="100,36,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="249"/>
-                        <TextBox x:Name="txtSLNhap"  HorizontalAlignment="Left" Height="23" Margin="100,64,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="249" IsEnabled="False" Text="Vui lòng chọn vào bảng bên dưới"/>
+                        <TextBox x:Name="txtSLTon" Text="{Binding NewBook.Quantity, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                                 Validation.Error="Validation_Error" 
+                                 IsReadOnly="True"
+                                 HorizontalAlignment="Left" Height="23" Margin="100,8,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="249"/>
+                        <TextBox x:Name="txtGia" Text="{Binding NewBook.Price, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                                 Validation.Error="Validation_Error"
+                                 IsReadOnly="True"
+                                 HorizontalAlignment="Left" Height="23" Margin="100,36,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="249"/>
+                        <TextBox x:Name="txtSLNhap" Text="{Binding AddionalQuantity , UpdateSourceTrigger=PropertyChanged}"
+                                 HorizontalAlignment="Left" Height="23" Margin="100,64,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="249" IsEnabled="False" />
 
                     </Grid>
                 </Grid>
@@ -88,13 +96,19 @@
         <Grid Grid.Row="1">
             <GroupBox Header="Chức Năng" Margin="15,10,15,0">
                 <Grid>
-                    <Button Click="ButtonAdd_OnClick"
+                    <Button x:Name="btnThem" Click="ButtonAdd_OnClick"
+                        Visibility="Collapsed"
                         Content="Thêm" Command="{Binding AddCommand}" 
-                            HorizontalAlignment="Center" Margin="234,5,440,0" VerticalAlignment="Top" Width="76"/>
+                            HorizontalAlignment="Center" Margin="144,5,540,0" VerticalAlignment="Top" Width="76"/>
 
-                    <Button Content="Xóa" Command="{Binding RemoveComand}" HorizontalAlignment="Center" Margin="335,5,341,0" VerticalAlignment="Top" Width="74"/>
+                    <Button x:Name="btnXoa"  Visibility="Collapsed" Content="Xóa" Command="{Binding RemoveComand}" HorizontalAlignment="Center" Margin="243,5,443,0" VerticalAlignment="Top" Width="74" RenderTransformOrigin="-0.777,0.6"/>
 
-                    <Button Content="Làm mới" Click="ButtonBase_OnClick"  HorizontalAlignment="Center" Margin="432,5,244,0" VerticalAlignment="Top" Width="74"/>
+                    <Button Content="Làm mới" Click="ButtonBase_OnClick"  HorizontalAlignment="Center" Margin="671,5,15,0" VerticalAlignment="Top" Width="74"/>
+                    
+                    <CheckBox Content="Sửa" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" HorizontalAlignment="Center" Margin="578,6,108,0" VerticalAlignment="Top" Width="74" FontSize="15"/>
+                    <Button x:Name="btnNhap"
+                        Content="Nhập" Command="{Binding UpdateCommand}" 
+                        HorizontalAlignment="Center" Margin="341,5,343,0" VerticalAlignment="Top" Width="76"/>
                 </Grid>
 
             </GroupBox>
@@ -122,7 +136,7 @@
                                 <GridViewColumn Header="Tác giả" Width="120" DisplayMemberBinding="{Binding Author}" />
                                 <GridViewColumn Header="Số Lượng Tồn" Width="120" DisplayMemberBinding="{Binding Quantity}" />
                                 <GridViewColumn Header="Đơn Giá" Width="120" DisplayMemberBinding="{Binding Price}" />
-                                <GridViewColumn Header="Số Lượng Nhập" Width="120" DisplayMemberBinding="{Binding Price}" />
+                               
                             </GridView>
                         </ListView.View>
                     </ListView>
