--- a/QLNS/App.xaml
+++ b/QLNS/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QLNS"
-             StartupUri="Views/BOOK_WINDOW.xaml">
+             StartupUri="MAIN_WINDOW.xaml">
     <Application.Resources>
          
     </Application.Resources>
