--- a/QLNS/Views/CLIENT_WINDOW.xaml
+++ b/QLNS/Views/CLIENT_WINDOW.xaml
@@ -10,6 +10,36 @@
         <viewModels:ClientViewModel>
         </viewModels:ClientViewModel>
     </Window.DataContext>
+    <Window.Resources>
+
+        <Style TargetType="{x:Type Label}">
+            <Setter Property="Margin" Value="5,0,5,0" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+        <Style TargetType="{x:Type TextBox}">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Margin" Value="0,2,40,2" />
+            <Setter Property="Validation.ErrorTemplate">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <DockPanel LastChildFill="true">
+                            <Border Background="Red" DockPanel.Dock="right" Margin="5,0,0,0" Width="15" Height="15" CornerRadius="10"
+                                    ToolTip="{Binding ElementName=customAdorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}">
+                                <TextBlock Text="!" VerticalAlignment="center" HorizontalAlignment="center" FontWeight="Bold" Foreground="white">
+                                </TextBlock>
+                            </Border>
+                            <AdornedElementPlaceholder Name="customAdorner" VerticalAlignment="Center" >
+                                <Border BorderBrush="red" BorderThickness="1" 
+                                        ToolTip="{Binding ElementName=customAdorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                                />
+
+                            </AdornedElementPlaceholder>
+                        </DockPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="130" ></RowDefinition>
@@ -24,20 +54,31 @@
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="0" >
-                        <Label Content="Mã Khách Hàng: " HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
-                        <Label Content="Họ Tên: " HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top"/>
-                        <Label Content="Địa Chỉ: " HorizontalAlignment="Left" Margin="7,59,0,0" VerticalAlignment="Top"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="110,3,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="111,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="254"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="111,59,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="254"/>
+                        <Label Content="Họ Tên: " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Địa Chỉ: " HorizontalAlignment="Left" Margin="9,36,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Điện Thoại: " HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
+
+                        <TextBox x:Name="txtHoten"
+                                 Text="{Binding NewClient.Name , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                            HorizontalAlignment="Left" Height="23" Margin="88,11,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
+                        <TextBox x:Name="txtDiaChi"
+                                 Text="{Binding NewClient.Address , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                                 HorizontalAlignment="Left" Height="23" Margin="88,39,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
+                        <TextBox x:Name="txtDienthoai"
+                                 Text="{Binding NewClient.Phonenum , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                                 HorizontalAlignment="Left" Height="23" Margin="88,67,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
                     </Grid>
                     <Grid Grid.Column="1">
-                        <Label Content="Điện Thoại: " HorizontalAlignment="Left" Margin="5,3,0,0" VerticalAlignment="Top"/>
-                        <Label Content="Email: " HorizontalAlignment="Left" Margin="5,28,0,0" VerticalAlignment="Top"/>
-                        <Label Content="Số tiền nợ: " HorizontalAlignment="Left" Margin="5,59,0,0" VerticalAlignment="Top"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="95,3,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="270"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="95,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="270"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="95,59,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="270"/>
+                        <Label Content="Email: " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                        <Label Content="Số tiền nợ: " HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.629,0.154"/>
+                        <Label Content="Số tiền thu: " HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.629,0.154"/>
+                        <TextBox x:Name="txtEmail"
+                                 Text="{Binding NewClient.Email , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                                 HorizontalAlignment="Left" Height="23" Margin="100,13,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
+                        <TextBox x:Name="txtSotienno"
+                                 Text="{Binding NewClient.Debt , UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" 
+                                 HorizontalAlignment="Left" Height="23" Margin="100,41,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="100,69,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
 
                     </Grid>
                 </Grid>
@@ -47,7 +88,8 @@
         <Grid Grid.Row="1">
             <GroupBox Header="Chức Năng" Margin="15,10,15,0">
                 <Grid>
-                    <Button Content="Thêm" HorizontalAlignment="Center" Margin="231,5,443,0" VerticalAlignment="Top" Width="76"/>
+                    <Button Command="{Binding AddCommand}" 
+                        Content="Thêm" HorizontalAlignment="Center" Margin="231,5,443,0" VerticalAlignment="Top" Width="76"/>
 
                     <Button Content="Sửa" HorizontalAlignment="Center" Margin="335,5,341,0" VerticalAlignment="Top" Width="74"/>
 
@@ -60,7 +102,30 @@
         <Grid Grid.Row="2">
             <GroupBox Header="Thông Tin Khách Hàng" Margin="15,10,15,0">
                 <Grid>
-                    <DataGrid></DataGrid>
+                    <ListView ItemsSource="{Binding ListClient, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedClient}" x:Name="ListBook" Margin="5" >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Margin="30,5,60,0"></TextBlock>
+                                    <TextBlock Text="{Binding Address }" HorizontalAlignment="Center" Margin="30,5,30,0"></TextBlock>
+                                    <TextBlock Text="{Binding Phonenum}" HorizontalAlignment="Center" Margin="30,5,30,0"></TextBlock>
+                                    <TextBlock Text="{Binding Email}" HorizontalAlignment="Center" Margin="30,5,30,0"></TextBlock>
+                                    <TextBlock Text="{Binding Debt}" HorizontalAlignment="Center" Margin="30,5,30,0"></TextBlock>
+
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Tên Khách Hàng" Width="140" DisplayMemberBinding="{Binding Name}" />
+                                <GridViewColumn Header="Địa Chỉ" Width="120" DisplayMemberBinding="{Binding Category}" />
+                                <GridViewColumn Header="Điện Thoại" Width="120" DisplayMemberBinding="{Binding Author}" />
+                                <GridViewColumn Header="Email" Width="120" DisplayMemberBinding="{Binding Quantity}" />
+                                <GridViewColumn Header="Số Tiền Nợ" Width="120" DisplayMemberBinding="{Binding Price}" />
+
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
                 </Grid>
 
             </GroupBox>
